<?xml version="1.0"?>
<package>
  <name>car_teleop</name>
  <version>0.5.0</version>
  <description>The car_teleop package</description>
  <maintainer email="mahmoud.ghorbel@hotmail.com">MG</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>

</package>
